# sad

./: .dockerignore  .gitignore  .gitmodules  .tool-versions  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  _config.yml  build.py  build.rs  lint.sh  mypy.ini  release.py  release.sh  release_notes.md  requirements.txt  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/: .agp  dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  rust.yml  testing.yml
ci/: ci.py  docker.py  docker.sh  pip.sh  release.py  vars.yml
ci/deb/: Dockerfile  artifacts.yml
ci/linux/: Dockerfile  artifacts.yml  build.sh
ci/templates/: homebrew.rb  homebrew.rb.j2  snap.yml.j2  snapcraft.yml  snapcraft.yml.j2
ci/templates/DEBIAN/: control
scripts/: ci.py  release.py
snap/: snapcraft.yaml
src/: argparse.rs  displace.rs  errors.rs  fs_pipe.rs  fzf.rs  input.rs  main.rs  options.rs  output.rs  subprocess.rs  types.rs  udiff.rs  udiff_spec.rs
tests/: te\s't2.tx  test1.txt  test3.txt
