[package]
authors     = ["git@bigly.dog"]
description = "Space Age seD | https://github.com/ms-jpq/sad"
edition     = "2021"
name        = "sad"
version     = "0.4.22"


[build-dependencies]
uuid = { version = "1", features = ["v4"] }

[dependencies]
aho-corasick  = { version = "*" }
ansi_term     = { version = "*" }
async-channel = { version = "*" }
atty          = { version = "*" }
clap          = { version = "*", features = ["derive", "wrap_help"] }
difflib       = { version = "*" }
futures       = { version = "*" }
regex         = { version = "*" }
shlex         = { version = "*" }
tokio         = { version = "*", features = ["full"] }
uuid          = { version = "*", features = ["v4"] }
which         = { version = "*" }
