[package]
authors     = ["git@bigly.dog"]
description = "Space Age seD | https://github.com/ms-jpq/sad"
edition     = "2021"
name        = "sad"
version     = "0.4.24"


[dependencies]
aho-corasick  = { version = "*" }
ansi_term     = { version = "*" }
clap          = { version = "*", features = ["derive", "wrap_help"] }
difflib       = { version = "*" }
futures       = { version = "*" }
regex         = { version = "*" }
shlex         = { version = "*" }
tokio         = { version = "*", features = ["full"] }
uuid          = { version = "*", features = ["v4"] }
which         = { version = "*" }
