[package]
authors     = ["git@bigly.dog"]
description = "Space Age seD | https://github.com/ms-jpq/sad"
edition     = "2021"
name        = "sad"
version     = "0.4.27"


[dependencies]
aho-corasick = { version = "*" }
ansi_term = { version = "*" }
clap = { version = "*", features = ["derive", "wrap_help"] }
difflib = { version = "*" }
futures = { version = "*" }
regex = { version = "*" }
shlex = { version = "*" }
tokio = { version = "*", features = [
  "fs",
  "io-std",
  "io-util",
  "net",
  "process",
  "rt-multi-thread",
  "signal",
] }
uuid = { version = "*", features = ["v4"] }
which = { version = "*" }
